Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-1216

Debugging with cdb doesn't show values in array of struct

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • Qt Creator 1.3.83 (2.0.0-beta)
    • Debugger
    • Windows Vista 64, MSVC 2005 + 2008
    • 436a0ffebffd5ecaa07596cd22baf6cc11265713

      Open tests/manual/gdbdebugger/simple/simple.pro , break in line 261 and see "Locals and Watchers". Compare this with the output when using gdb.

        1. cdb.png
          27 kB
          Robert Löhning
        2. gdb.png
          20 kB
          Robert Löhning
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes