Debugger[CDB]: Fix expanding arrays.

Strip '[', ']' off inames in coreengine so
that the name lookup for them works.
Handle 64bit-addresses in .dvalloc-output
parsing for dumpers. Some debug formatting.

Task-number: QTCREATORBUG-1216